Clean up and modernize
- replace deprecated Locale constructor with Locale.Builder
- avoid using URLs when URIs will do to avoid potentially slow DNS lookups
- make better use of type checking
- make better use of try-with-resources
- narrow exceptions caught
- simplify loops